content/v19.1/orchestrate-a-local-cluster-with-kubernetes.md
---
title: Orchestrate a Local Cluster with Kubernetes
summary: Orchestrate the deployment and management of a local cluster using Kubernetes.
toc: true
secure: true
---

<div class="filters filters-big clearfix">
  <button class="filter-button current"><strong>Secure</strong></button>
  <a href="orchestrate-a-local-cluster-with-kubernetes-insecure.html"><button class="filter-button">Insecure</button></a>
</div>

On top of CockroachDB's built-in automation, you can use a third-party [orchestration](orchestration.html) system to simplify and automate even more of your operations, from deployment to scaling to overall cluster management.

This page walks you through a simple demonstration, using the open-source [Kubernetes](http://kubernetes.io/) orchestration system. Using either the CockroachDB [Helm](https://helm.sh/) chart or a few configuration files, you'll quickly create a 3-node local cluster. You'll run some SQL commands against the cluster and then simulate node failure, watching how Kubernetes auto-restarts without the need for any manual intervention. You'll then scale the cluster with a single command before shutting the cluster down, again with a single command.

{{site.data.alerts.callout_info }}
To orchestrate a physically distributed cluster in production, see [Orchestrated Deployments](orchestration.html).
{{site.data.alerts.end }}

{{ partial "{{ page.version.version }}/orchestration/local-start-kubernetes.md" . }}

## Step 2. Start CockroachDB

To start your CockroachDB cluster, you can either use our StatefulSet configuration and related files directly, or you can use the [Helm](https://helm.sh/) package manager for Kubernetes to simplify the process.

<div class="filters filters-big clearfix">
    <button class="filter-button" data-scope="helm">Use Helm</button>
    <button class="filter-button" data-scope="manual">Use Configs</button>
</div>

<section class="filter-content" markdown="1" data-scope="manual">
{{ partial "{{ page.version.version }}/orchestration/start-cockroachdb-secure.md" . }}
</section>

<section class="filter-content" markdown="1" data-scope="helm">
{{ partial "{{ page.version.version }}/orchestration/start-cockroachdb-helm-secure.md" . }}
</section>

## Step 3. Use the built-in SQL client

{{ partial "{{ page.version.version }}/orchestration/test-cluster-secure.md" . }}

## Step 4. Access the Admin UI

{{ partial "{{ page.version.version }}/orchestration/monitor-cluster.md" . }}

## Step 5. Simulate node failure

{{ partial "{{ page.version.version }}/orchestration/kubernetes-simulate-failure.md" . }}

## Step 6. Add nodes

1. Add a pod for another CockroachDB node:

    <section class="filter-content" markdown="1" data-scope="manual">
    {{ partial "copy-clipboard.html" . }}
    ~~~ shell
    $ kubectl scale statefulset cockroachdb --replicas=4
    ~~~

    ~~~
    statefulset.apps/cockroachdb scaled
    ~~~
    </section>

    <section class="filter-content" markdown="1" data-scope="helm">
    {{ partial "copy-clipboard.html" . }}
    ~~~ shell
    $ helm upgrade \
    my-release \
    cockroachdb/cockroachdb \
    --set Replicas=4 \
    --reuse-values
    ~~~

    ~~~
    statefulset "my-release-cockroachdb" scaled
    ~~~
    </section>

2. Get the name of the `Pending` CSR for the new pod:

    {{ partial "copy-clipboard.html" . }}
    ~~~ shell
    $ kubectl get csr
    ~~~

    <section class="filter-content" markdown="1" data-scope="manual">
    ~~~
    NAME                         AGE       REQUESTOR                                   CONDITION
    default.client.root          8m        system:serviceaccount:default:cockroachdb   Approved,Issued
    default.node.cockroachdb-0   22m       system:serviceaccount:default:cockroachdb   Approved,Issued
    default.node.cockroachdb-1   22m       system:serviceaccount:default:cockroachdb   Approved,Issued
    default.node.cockroachdb-2   22m       system:serviceaccount:default:cockroachdb   Approved,Issued
    default.node.cockroachdb-3   2m        system:serviceaccount:default:cockroachdb   Pending
    ~~~
    </section>

    <section class="filter-content" markdown="1" data-scope="helm">
    ~~~
    NAME                                    AGE   REQUESTOR                                              CONDITION
    default.client.root                     8m    system:serviceaccount:default:my-release-cockroachdb   Approved,Issued
    default.node.my-release-cockroachdb-0   22m   system:serviceaccount:default:my-release-cockroachdb   Approved,Issued
    default.node.my-release-cockroachdb-1   22m   system:serviceaccount:default:my-release-cockroachdb   Approved,Issued
    default.node.my-release-cockroachdb-2   22m   system:serviceaccount:default:my-release-cockroachdb   Approved,Issued
    default.node.my-release-cockroachdb-3   2m    system:serviceaccount:default:my-release-cockroachdb   Pending
    ~~~
    </section>

3. Approve the CSR for the new pod:

    <section class="filter-content" markdown="1" data-scope="manual">
    {{ partial "copy-clipboard.html" . }}
    ~~~ shell
    $ kubectl certificate approve default.node.cockroachdb-3
    ~~~

    ~~~
    certificatesigningrequest.certificates.k8s.io/default.node.cockroachdb-3 approved
    ~~~
    </section>

    <section class="filter-content" markdown="1" data-scope="helm">
    {{ partial "copy-clipboard.html" . }}
    ~~~ shell
    $ kubectl certificate approve default.node.my-release-cockroachdb-3
    ~~~

    ~~~
    certificatesigningrequest.certificates.k8s.io/default.node.my-release-cockroachdb-3 approved
    ~~~
    </section>

4. Confirm that pod for the fourth node, `cockroachdb-3`, is `Running` successfully:

    {{ partial "copy-clipboard.html" . }}
    ~~~ shell
    $ kubectl get pods
    ~~~

    <section class="filter-content" markdown="1" data-scope="manual">
    ~~~
    NAME                         READY     STATUS    RESTARTS   AGE
    cockroachdb-0                1/1       Running   0          28m
    cockroachdb-1                1/1       Running   0          27m
    cockroachdb-2                1/1       Running   0          10m
    cockroachdb-3                1/1       Running   0          5s
    cockroachdb-client-secure    1/1       Running   0          25m
    ~~~
    </section>

    <section class="filter-content" markdown="1" data-scope="helm">
    ~~~
    NAME                                 READY     STATUS    RESTARTS   AGE
    my-release-cockroachdb-0             1/1       Running   0          28m
    my-release-cockroachdb-1             1/1       Running   0          27m
    my-release-cockroachdb-2             1/1       Running   0          10m
    my-release-cockroachdb-3             1/1       Running   0          5s
    example-545f866f5-2gsrs              1/1       Running   0          25m
    ~~~
    </section>

## Step 7. Remove nodes

{{ partial "{{ page.version.version }}/orchestration/kubernetes-remove-nodes-secure.md" . }}

## Step 8. Stop the cluster

- **If you plan to restart the cluster**, use the `minikube stop` command. This shuts down the minikube virtual machine but preserves all the resources you created:

    {{ partial "copy-clipboard.html" . }}
    ~~~ shell
    $ minikube stop
    ~~~

    ~~~
    Stopping local Kubernetes cluster...
    Machine stopped.
    ~~~

    You can restore the cluster to its previous state with `minikube start`.

- **If you do not plan to restart the cluster**, use the `minikube delete` command. This shuts down and deletes the minikube virtual machine and all the resources you created, including persistent volumes:

    {{ partial "copy-clipboard.html" . }}
    ~~~ shell
    $ minikube delete
    ~~~

    ~~~
    Deleting local Kubernetes cluster...
    Machine deleted.
    ~~~

    {{site.data.alerts.callout_success}}To retain logs, copy them from each pod's <code>stderr</code> before deleting the cluster and all its resources. To access a pod's standard error stream, run <code>kubectl logs &lt;podname&gt;</code>.{{site.data.alerts.end }}

## See also

Explore other core CockroachDB benefits and features:

{{ partial "{{ page.version.version }}/misc/explore-benefits-see-also.md" . }}

You might also want to learn how to [orchestrate a production deployment of CockroachDB with Kubernetes](orchestrate-cockroachdb-with-kubernetes.html).
